--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}TechOne{% endblock %}</title>
+    <link rel="icon" href="{% static 'tech-one.ico' %}?v=2" type="image/x-icon" sizes="any">
+    <link rel="shortcut icon" href="{% static 'tech-one.ico' %}?v=2" type="image/x-icon">
+    <link rel="icon" href="{% static 'tech-one.png' %}?v=2" type="image/png">
     <link rel="stylesheet" href="{% static 'core/css/techone.css' %}">
 </head>
 <body>
